[ezmorph] fix for 1613580